# University

./: .gitignore
L5/src/: Main.java  PasswordUtil.java
L5/src/database/: CategorySeeder.java  DatabaseConnection.java  DatabaseSeeder.java
L5/src/models/: Order.java  OrderItem.java  Product.java  Role.java  User.java
L5/src/services/: AuthService.java  OrderService.java  ProductService.java  UserService.java
L5/src/utils/: BCryptUtil.java  ConsoleUtil.java
oop/lab3/c++/: Zadanie2.cpp
oop/lab3/java/: Test.java
oop/lab4/c++/: Circle.h  Figure.h  Pentagon.h  Zadanie2.cpp
oop/lab6/: ButtonController.java  SavingManager.java  SerializablePolygon.java
oop/lab6/Javadoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  module-search-index.js  overview-tree.html  package-search-index.js  pom.xml  search.html  serialized-form.html  type-search-index.js
semester_2/oop/lab6/: CircleFx.java  Javadoc  MainGui.java  Menu.java  PaintPlane.java  RectangleFX.java  Shape.java  ShapesModel.java  TriangleFX.java
semester_3/: AKISO
semester_3/AKISO/: Notes.md
semester_3/AKISO/L5/: functions.asm
semester_3/AKISO/lista2/: zad6.c  zad7.sh  zad7_boot.c
semester_3/AKISO/lista3/: ex1.sh  ex2.sh  ex6.sh
semester_3/AKISO/lista4/: ex1.c  ex2.1.c  ex2.2.c  lsh.c
semester_3/AKISO/lista5/: ex2.asm
semester_3/MPIS/Homework2/: logfile.txt  main.py  plots.py  results.txt
semester_3/MPIS/Homework3/: ex1.py  ex1plots.py  ex2.py  ex2plots.py  ex3.py
semester_3/MPIS/Homework4/ex3/: CMakeLists.txt
semester_3/MPIS/Homework4/ex3/cpp/include/: histogram.hpp  simulation.hpp
semester_3/MPIS/Homework4/ex3/cpp/main/: main.cpp
semester_3/MPIS/Homework4/ex3/cpp/src/: histogram.cpp  saimulation.cpp
semester_4/AIDS/: .gitignore
semester_4/AIDS/L2/ex1/: CMakeLists.txt
semester_4/AIDS/L2/ex1/src/cpp/: CMakeLists.txt  comperer.cpp
semester_4/AIDS/L2/ex1/src/genartors/: decrease-generator.cpp  increase-generator.cpp  radom-generator.cpp
semester_4/AIDS/L2/ex1/src/generators/: CMakeLists.txt  decrease-generator.cpp  increase-generator.cpp  radom-generator.cpp  random-generator.cpp
semester_4/AIDS/L2/ex1/src/include/: SortUtility.hpp  comperer.hpp  dual-pivot-quicksort.hpp  hybrid-sort.hpp  insertion-sort.hpp  megre-sorts.hpp  quick-sort.hpp
semester_4/AIDS/L2/ex1/src/sort/: CMakeLists.txt  dual-pivot-quicksort.cpp  hybrid-sort.cpp  insertion-sort.cpp  merge-sort.cpp  quick-sort.cpp  smart-merge-sort.cpp
semester_4/AIDS/L2/ex1/tests/: CMakeLists.txt  dual_pivot_quicksort_test.cpp  hybrid_sort_test.cpp  insertion_sort_test.cpp  merge_sorts_test.cpp  quick_sort_test.cpp
semester_4/AIDS/L3/ex1/: CMakeLists.txt
semester_4/AIDS/L3/ex1-5/: CMakeLists.txt
semester_4/AIDS/L3/ex1-5/src/cpp/: random-generator.cpp  random-select.cpp  select.cpp
semester_4/AIDS/L3/ex1-5/src/include/: QuickSorts.hpp  binarySearch.hpp  dual-pivot-quicksort.hpp  generators.hpp  logger.hpp  operationCounter.hpp  quick-sort.hpp  selects.hpp
semester_4/AIDS/L3/ex1-5/src/simulations/: ex2-sim.cpp  ex2s.cpp  ex3-sim.cpp  ex3s.cpp  ex4s.cpp  ex5s.cpp
semester_4/AIDS/L3/ex1-5/src/tests/: test_QuickSorts.cpp
semester_4/AIDS/L3/ex1/src/include/: functions.hpp  generator.hpp  logger.hpp
semester_4/AIDS/L3/ex1/src/main/: random-select.cpp  select.cpp
semester_4/AIDS/L4/: CMakeLists.txt  SprawozdanieTmux
semester_4/AIDS/L4/ex5/: CMakeLists.txt
semester_4/AIDS/L4/ex5/src/cpp/: SplayTree.cpp
semester_4/AIDS/L4/ex5/src/include/: SplayTree.hpp
semester_4/AIDS/L4/ex5/src/main/: main.cpp
semester_4/AIDS/L5/ex3Sim/: CMakeLists.txt
semester_4/AIDS/L5/ex3Sim/src/cpp/: BHeap.cpp
semester_4/AIDS/L5/ex3Sim/src/include/: BHeap.hpp
semester_4/AIDS/L5/ex3Sim/src/main/: main.cpp  main2.cpp
semester_4/Modern Web Technologies/L3/: index.html  styles.css  wisielec.js
semester_4/Modern Web Technologies/L4/: .env  .gitignore  package-lock.json  package.json
semester_4/Network Technologies/L1/: Sprawozdanie.md
semester_4/Network Technologies/L3/: main.py  main2.py  main3.py  main4.py  output.txt  zad_2.txt
semester_4/Portfolio-Old/: PortfolioSaS.css  index.html
semester_4/WSI/L1/: Readme.md
semester_4/WSI/L2/: CMakeLists.txt
semester_4/WSI/L2/databases/: simulation.cpp
semester_4/WSI/L2/src/cpp/: DisjointPatternDB.cpp  NPuzzle.cpp
semester_4/WSI/L2/src/include/: DisjointPatternDB.hpp  Heuristics.hpp  NPuzzle.hpp  Node.hpp
semester_4/WSI/L2/src/main/: load15.cpp  load8.cpp  main.cpp  save15.cpp  save8.cpp  simulation.cpp
semester_4/WSI/L3/: CMakeLists.txt
semester_4/WSI/L3 (Copy)/: CMakeLists.txt
semester_4/WSI/L3 (Copy)/src/: CMakeLists.txt
semester_4/WSI/L3 (Copy)/src/cpp/: board.cpp  game_bot.cpp  game_client.cpp  game_server.cpp  genetic.cpp
semester_4/WSI/L3 (Copy)/src/include/: board.hpp  game_bot.hpp  game_client.hpp  game_server.hpp
semester_4/WSI/L3/src/cpp/: Bot.cpp
semester_4/WSI/L3/src/include/: bot.hpp
semester_4/WSI/L3/src/main/: main.cpp
semester_4/WSI/L3/src/tests/: test_bot.cpp
semester_4/WSI/L5/: CMakeLists.txt
semester_4/WSI/L5python/: Network.py  main.py
semester_5/AOD/: A Theoretician’s Guide to Experimental Algorithm Design and Debugging.md
semester_5/AOD/L1/: A Theoretician’s Guide to Experimental Algorithm Design and Debugging.md  generate_pngs.sh  sprawozdanie.md
semester_5/AOD/L1/ex2/: CMakeLists.txt  main.cpp
semester_5/AOD/L2/: Sprawozdanie.fdb_latexmk  Sprawozdanie.fls  Sprawozdanie.tex  ex4.jl  ex5.jl
semester_5/AOD/L3/: .gitignore  CMakeLists.txt  Sprawozdanie.tex  generate_plots.py  generate_tables.py  generate_tables_final.py  main.cpp  paths.csv  run_experiments.py
semester_5/AOD/L3/include/: algorithms.hpp  graph.hpp
semester_5/AOD/L3/results/: paths.csv  tabele_do_sprawozdania.txt  table_p2p_distances.csv  table_random_sources.csv  table_single_source.csv  times.csv
semester_5/AOD/L3/src/: dial.cpp  dijkstra.cpp  graph.cpp  radixHeap.cpp
semester_5/JFTT/L1/: FA.py  KMP.py  test.txt
semester_5/JFTT/L2/: .gitignore  FlexManual.text
(+409 files in other folders)
